# nflux

./: .buildinfo  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  PKGBUILD  README.md  cog.toml  compose.yml  config.toml  fedora.yml  genindex.html  index.html  install.sh  nflux.conf  nflux.toml  nflux.toml.example  objects.inv  preview.py  project_notes.md  rust-toolchain.toml  rustfmt.toml  search.html  searchindex.js
.git-hooks/: pre-push
.github/: dependabot.yml
.github/trash/: container_build.yml
.github/workflows/: arch-release.yml  arch.yml  archpipeline.yml  auto-merge.yml  build.yml  docker.yml  docs.yml  lint.yml  release.yml  test.yml  version.yml
debian/: build_deb.sh  conffiles  control  nflux.service  postinst  postrm
demo/: services.yml
demo/bind/configuration/: db.mycompany.org  named.conf
disabled_ebpf-cgroups/: Cargo.toml
disabled_ebpf-cgroups/src/: main.rs
docker/: Dockerfile  compose.yml
docs/: index.html  installation.md  local_dev.md  old_nflux.md  release.md  todo.md  todo_and_features.md  usage.md  what_is_ebpf.md
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  local.rst  local_dev.rst  monitoring.rst  usage.rst
ebpf/: Cargo.toml
ebpf-cgroups/: Cargo.toml
ebpf-cgroups/src/: main.rs
ebpf-dpkt/: Cargo.toml
ebpf-dpkt/src/: vmlinux.rs
ebpf-tc/: Cargo.toml
ebpf-tc/src/: handle_packet.rs
ebpf/ebpf-dpkt/: Cargo.toml
ebpf/ebpf-dpkt/src/: main.rs
ebpf/ebpf-tc/: Cargo.toml
ebpf/ebpf-tc/src/: logger.rs  main.rs  maps.rs
ebpf/ebpf-xdp/: Cargo.toml
ebpf/ebpf-xdp/src/: main.rs  maps.rs
ebpf/src/: dto.rs  handle_packet.rs  logger.rs  main.rs  maps.rs  try_cgroups.rs  try_dpkt.rs  try_tc.rs  utils.rs  vmlinux.rs
ebpfw/: Cargo.toml  build.rs
ebpfw-common/: Cargo.toml
ebpfw-common/src/: lib.rs
ebpfw-ebpf/: Cargo.toml
ebpfw-ebpf/src/: actions.rs  main.rs
ebpfw/src/: cli.rs  config.rs  logger.rs  main.rs  utils.rs
infra/: .env.example  client.docker-compose.yml  loki-config.yaml  monitoring.yml  nflux-compose.yml  nflux_dashboard.ndjson  query.txt  server.docker-compose.yml
infra/fluent-bit/: fluent-bit.yaml  geo.lua
infra/grafana/: org.yml
infra/lima/: debian.yml
infra/loki/: loki-config.yaml  other.yaml
infra/old/: client.docker-compose.yml  nflux.compose
infra/old-grafana-stack/: server.docker-compose.yml
infra/old-grafana-stack/grafana/: dashboards.yaml
infra/old/promtail/: config.yml
infra/promtail/: config.yml
lima/: debian.yml  fedora.yml  ubuntu.yml
netrace-ebpf/: Cargo.toml
netrace-ebpf/src/: main.rs  maps.rs  tc_event.rs
nflux/: Cargo.toml  build.rs
nflux-common/: Cargo.toml
nflux-common/src/: dto.rs  lib.rs  maps.rs  skb_reason.rs  utils.rs
nflux-ebpf/: Cargo.toml
nflux-ebpf-dpkt/: Cargo.toml
nflux-ebpf-dpkt/src/: main.rs  maps.rs
nflux-ebpf-tc/: Cargo.toml
nflux-ebpf-tc/src/: handle_packet.rs  main.rs  tc_event.rs
nflux-ebpf/src/: actions.rs  dropped_packets.rs  egress.rs  egress_vpn.rs  firewall.rs  handle_ipv6.rs  handle_packet.rs  handle_ports.rs  handle_protocols.rs  handlers.rs  ingress.rs  logger.rs  main.back.rs  main.rs  maps.rs  old_main.rs  tc.rs  tc_event.rs  try_tc.rs
nflux-ebpf/src/traffic_control/: egress.rs  handlers.rs  mod.rs
nflux-ebpf/src/xdp_firewall/: firewall.rs
nflux/src/: cgroups_program.rs  cli.rs  config.rs  containers.rs  core.rs  custom_logger.rs  dpkt_program.rs  ebpf_mapping.rs  egress.rs  events.rs  firewall.rs  ipinfo.rs  lib.rs  logger.rs  main.rs  metrics.rs  network_event.rs  old_cli.rs  programs.rs  prometheus.rs  start_dropped_packets.rs  tc.rs  tc_event.rs  tc_program.rs  traffic_control.rs  try_netrace.rs  try_nflux.rs  try_tc.rs  utils.rs  xdp_firewall.rs  xdp_program.rs
nflux/src/cli/: args.rs  cli.rs  commands.rs  mod.rs
nflux/src/netrace/: mod.rs  tc_event.rs  try_tc.rs
nflux/src/tlstrace/: mod.rs  tls_event.rs  try_tlstrace.rs
nflux/tests/: config_tests.rs
packaging/: PKGBUILD  nflux.install
packaging/debian/: postinst  postrm  prerm
packaging/system/: nflux.logrotate  nflux.service
scripts/: ad-chore.sh  check-version-tag.sh  install.sh  local-install.sh  pre-commit.sh
stuff/: test.rs
systemd/: nflux.logrotate  nflux.service
tlstrace-ebpf/: Cargo.toml
tlstrace-ebpf/src/: main.rs
xtask/src/: build.rs  build_ebpf.rs  main.rs  run.rs
