[workspace]
resolver = "2"
members = ["nflux", "nflux-common", "netrace-ebpf", "tlstrace-ebpf"]
default-members = ["nflux", "nflux-common"]

[workspace.dependencies]
aya = { version = "0.13.0", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
nflux-common = { path = "nflux-common", version = "0.1.0" }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.19.2", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.32", default-features = false, features = ["std"] }
env_logger = { version = "0.11.6", default-features = false }
libc = { version = "0.2.171", default-features = false }
log = { version = "0.4.27", default-features = false }
tokio = { version = "1.44.1", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.netrace-ebpf]
debug = 2
codegen-units = 1

[profile.release.package.tlstrace-ebpf]
debug = 2
codegen-units = 1

[profile.release]
strip = true
