[workspace]
resolver = "2"
members = ["nflux", "nflux-common", "ebpf/ebpf-xdp"]
default-members = ["nflux", "nflux-common"]

[workspace.package]
license = "MIT OR GPL-3.0"

[workspace.dependencies]
aya = { version = "0.13.0", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
env_logger = { version = "0.11.6", default-features = false }
libc = { version = "0.2.177", default-features = false }
log = { version = "0.4.28", default-features = false }
tokio = { version = "1.48.0", default-features = false }
which = { version = "8.0.0", features = ["real-sys"], default-features = false }

# [profile.release.package.ebpf-tc]
# debug = 2
# codegen-units = 1

[profile.release.package.ebpf-xdp]
debug = 2
codegen-units = 1

[profile.release.package.nflux]
strip = true
