[workspace]
resolver = "2"
members = ["nflux", "nflux-common", "nflux-ebpf"]
default-members = ["nflux", "nflux-common"]

[workspace.package]
license = "GPL-3.0"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.6", default-features = false }
libc = { version = "0.2.180", default-features = false }
log = { version = "0.4.29", default-features = false }
tokio = { version = "1.48.0", default-features = false }
which = { version = "8.0.0", features = ["real-sys"], default-features = false }

[profile.release.package.nflux-ebpf]
debug = 2
codegen-units = 1

[profile.release.package.nflux]
strip = true
