[package]
name = "ebpf-cgroups"
version = "0.1.0"
edition = "2021"

[dependencies]
nflux-common = { path = "../nflux-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "cgroups"
path = "src/main.rs"
