[package]
name = "ebpf-dpkt"
version = "0.1.0"
edition = "2021"

[dependencies]
nflux-common = { path = "../nflux-common/", version = "0.1.0" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"
log = "0.4.27"

[build-dependencies]
which = { workspace = true }


[[bin]]
name = "dpkt"
path = "src/main.rs"
