[package]
name = "netrace-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
nflux-common = { path = "../nflux-common", version = "0.1.0"}

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"
log = "0.4.26"

[build-dependencies]
which = { workspace = true }


[[bin]]
name = "netrace"
path = "src/main.rs"
