[package]
name = "nflux-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
nflux-common = { path = "../nflux-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"
log = "0.4.25"

[build-dependencies]
which = { workspace = true }


[[bin]]
name = "nflux"
path = "src/main.rs"
