[package]
name = "nflux-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
nflux-common = { path = "../nflux-common/" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"
log = "0.4.29"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "nflux"
path = "src/main.rs"
