[package]
name = "tlstrace-ebpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nflux-common = { path = "../nflux-common", version = "0.1.0" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tlstrace"
path = "src/main.rs"
