[package]
name = "tlstrace-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
nflux-common = { workspace = true, version = "0.1.0" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tlstrace"
path = "src/main.rs"
